# JCA-Members-update

./: .dockerignore  .env.example  .firebaserc  .gitignore  20250420_LifeMember List Update_Format.xlsx  DOCKER.md  Dockerfile  HOSTING.txt  Master_List_Format_1500_Records.xlsx  Modified_And_New_Members.xlsx  docker-compose.yml  firebase.json  firestore.rules  pyproject.toml
.firebase/: hosting.d2ViXGRpc3Q.cache
config/: import.example.json
scripts/: add_test_member_phone.py  docker_smoke.py  enable_firebase_email_link.py  export_member_changes.py  generate_master_list_1500.py  generate_qr.py  import_members_firestore.py
src/jca_data_update/: __init__.py  main.py
web/: .dockerignore  Dockerfile  env.example  index.html  nginx.conf  package-lock.json  package.json
web/src/: App.tsx  VerifySignInView.tsx  auth.ts  authErrors.ts  firebase.ts  phoneAuth.ts  search.ts  styles.css  types.ts
