[project]
name = "jca-data-update"
version = "0.1.0"
description = "JCA data update utilities"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
import = ["firebase-admin>=6.5.0", "openpyxl>=3.1.0"]

[project.scripts]
jca-data-update = "jca_data_update.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jca_data_update"]
